# rxinu

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  Xargo.toml  i686-rxinu.json  x86_64-rxinu.json
.cargo/: config.toml
allocator/bump_allocator/: Cargo.toml
allocator/bump_allocator/src/: lib.rs
allocator/hole_list_allocator/: Cargo.toml
allocator/hole_list_allocator/src/: lib.rs
arch/x86/: Cargo.toml
arch/x86/asm/: linker.ld  sse.S  startup-common.S
arch/x86/asm/i686/: start.S
arch/x86/asm/x86_64/: start.S  start.nasm
arch/x86/i686/: Cargo.toml
arch/x86/i686/src/: lib.rs
arch/x86/i686/src/device/: mod.rs  vga.rs
arch/x86/i686/src/memory/: mod.rs  stack_allocator.rs
arch/x86/i686/src/memory/paging/: entry.rs  mapper.rs  mod.rs  page.rs  table.rs
arch/x86/src/: console.rs  lib.rs
arch/x86/src/device/: serial.rs  vga.rs
arch/x86/src/interrupts/: exception.rs  gdt.rs  idt.rs  mod.rs
arch/x86/src/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
arch/x86/src/memory/paging/: entry.rs  mapper.rs  mod.rs  page.rs  table.rs  temporary_page.rs
arch/x86/x86_64/: Cargo.toml
arch/x86/x86_64/src/: console.rs  interrupts.rs  lib.rs
arch/x86/x86_64/src/device/: mod.rs  pic.rs  serial.rs  vga.rs
arch/x86/x86_64/src/device/io/: mod.rs  port.rs
arch/x86/x86_64/src/interrupts/: exception.rs  exception_stack_frame.rs  gdt.rs  idt.rs  irq.rs  mod.rs
arch/x86/x86_64/src/memory/: mod.rs
arch/x86/x86_64/src/memory/paging/: entry.rs  mapper.rs  mod.rs  page.rs  table.rs
src/: lib.rs  main.rs  sync.rs  test.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/x86/: check-common.S  console.rs  context.rs  device.rs  error.S  idt.rs  linker.ld  mod.rs  multiboot_header.S  sse.S  start.S  startup-common.S
src/arch/x86/asm/: check-common.nasm  error.S  grub.cfg  sse.nasm  startup-common.nasm
src/arch/x86/asm/i386/: paging.S
src/arch/x86/asm/i686/: paging.nasm  start.nasm
src/arch/x86/asm/x86_64/: check_long_mode.nasm  long_mode_start.nasm  paging.nasm  start.S
src/arch/x86/context/: bits32.rs  bits64.rs  context_switch.asm  mod.rs
src/arch/x86/device/: mod.rs  pic.rs  serial.rs  vga.rs
src/arch/x86/gdt/: bits32.rs  bits64.rs  mod.rs
src/arch/x86/i386/: sse.S  start-i386.S  start.S
src/arch/x86/interrupts/: exception.rs  gdt.rs  idt.rs  irq.rs  mod.rs  syscall.rs
src/arch/x86/interrupts/exception/: bits32.rs  bits64.rs  mod.rs
src/arch/x86/memory/: area_frame_allocator.rs  heap_allocator.rs  mod.rs  stack_allocator.rs
src/arch/x86/memory/heap/: bump_allocator.rs  mod.rs
src/arch/x86/memory/paging/: entry.rs  mapper.rs  mod.rs  page.rs  table.rs  temporary_page.rs
src/arch/x86/memory/paging/mapper/: bits32.rs  bits64.rs  mod.rs
src/arch/x86/memory/paging/table/: bits32.rs  bits64.rs  mod.rs
src/arch/x86/x86_64/: check_long_mode.S  long_mode_start.S  paging.S  sse.S  start.S
src/arch/x86_64/: console.rs  context.rs  context_switch.asm  device.rs  gdt.rs  idt.rs  mod.rs
src/arch/x86_64/interrupts/: exception.rs  irq.rs  mod.rs  syscall.rs
src/arch/x86_64/memory/: area_frame_allocator.rs  heap.rs  mod.rs  stack_allocator.rs
src/arch/x86_64/memory/allocators/: fixed_size_block.rs  mod.rs
src/arch/x86_64/memory/heap/: bump_allocator.rs  mod.rs
src/device/: console.rs  keyboard.rs  mod.rs  pic_8259.rs  pit.rs  ps2_controller_8042.rs  ps2_keyboard.rs  uart_16550.rs  vga.rs
src/device/keyboard/: mod.rs  ps2.rs
src/device/keyboard/layout/: mod.rs  us_std.rs
src/device/serial/: mod.rs  uart_16550.rs
src/devices/: keyboard.rs  mod.rs  pic_8259.rs  ps2_controller_8042.rs  ps2_keyboard.rs  uart_16550.rs  vga.rs
src/ipc/: bounded_buffer.rs  mod.rs
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  page.rs  table.rs
src/scheduler/: cooperative_scheduler.rs  mod.rs  process.rs
src/scheduling/: cooperative_scheduler.rs  mod.rs  process.rs  process_id.rs  process_list.rs
src/sync/: irq.rs  mod.rs  semaphore.rs
src/syscall/: error.rs  mod.rs  process.rs
src/syscall/io/: io.rs  mod.rs  port.rs
src/task/: cooperative_scheduler.rs  mod.rs  process.rs  process_list.rs  yield_now.rs
src/task/scheduler/: cooperative.rs  mod.rs  preemptive.rs  priority.rs  round_robin.rs
src/vga_buffer/: buffer.rs  color.rs  mod.rs  writer.rs
tests/: boot.rs  exception.rs  ipc.rs  panic.rs  task-preemption.rs  task.rs
tests/scheduler/: main.rs  priority.rs  round_robin.rs
userspace/: syscall.rs
