[package]
name = "rxinu"
version = "0.1.0"
authors = [ "robert.w.gries@gmail.com" ]
license = "MIT OR Apache-2.0"
edition = "2018"

[[test]]
name = "panic"
harness = false

[dependencies]
bit_field = "0.7.0"
bitflags = "1.0.1"
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
linked_list_allocator = "0.8.0"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.12.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
default = ["serial", "vga"]
serial = []
vga = []

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-curses"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1