[package]
name = "arch_i686"
version = "0.1.0"
authors = [ "robert.w.gries@gmail.com" ]

[dependencies]
bitflags = "0.9.1"
# TODO: Submit issue for broken multiboot2-elf64
# multiboot2 = { git = "https://github.com/phil-opp/multiboot2-elf64", features = ["elf32"] }
multiboot2 = { git = "https://github.com/ahmedcharles/multiboot2-elf64", branch = "elf32" }
once = "0.3.2"
rlibc = "1.0.0"
spin = "0.4.5"
volatile = "0.1.0"

[dependencies.x86]
version = "0.8.0"
default-features = false

[dependencies.hole_list_allocator]
path = "../../../allocator/hole_list_allocator"
