[package]
name = "arch_x86_64"
version = "0.1.0"
authors = [ "robert.w.gries@gmail.com" ]

[dependencies]
bit_field = "0.7.0"
bitflags = "0.7.0"
multiboot2 = "0.3.1"
once = "0.3.2"
rlibc = "1.0.0"
spin = "0.4.5"
volatile = "0.1.0"
x86_64 = "0.1.0"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

[dependencies.bump_allocator]
path = "../../../allocator/bump_allocator"

[dependencies.hole_list_allocator]
path = "../../../allocator/hole_list_allocator"

[features]
serial = []
vga = []
